# kernel_launcher

./: .buildinfo  .clang-format  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  api.html  env_vars.html  example.html  genindex.html  index.html  install.html  license.html  objects.inv  search.html  searchindex.js
.github/workflows/: docs.yml
_sources/: api.rst.txt  env_vars.rst.txt  index.rst.txt
_sources/api/: Compiler.rst.txt  Config.rst.txt  ConfigSpace.rst.txt  CudaArch.rst.txt  CudaContextHandle.rst.txt  CudaDevice.rst.txt  CudaException.rst.txt  CudaSpan.rst.txt  DefaultLoader.rst.txt  DefaultOracle.rst.txt  FileLoader.rst.txt  ICompiler.rst.txt  IKernelDescriptor.rst.txt  IntoKernelArg.rst.txt  Kernel.rst.txt  KernelArg.rst.txt  KernelBuilder.rst.txt  KernelInstance.rst.txt  KernelRegistry.rst.txt  KernelSource.rst.txt  NvrtcCompiler.rst.txt  NvrtcException.rst.txt  Oracle.rst.txt  PragmaKernel.rst.txt  ProblemSize.rst.txt  TemplateArg.rst.txt  TunableParam.rst.txt  TypeInfo.rst.txt  Value.rst.txt  Variable.rst.txt  WisdomKernel.rst.txt  WisdomRecord.rst.txt  WisdomSettings.rst.txt  add_global_capture_pattern.rst.txt  append_global_wisdom_directory.rst.txt  build_pragma_kernel.rst.txt  builder.rst.txt  capture_file_exists.rst.txt  compiler.rst.txt  config.rst.txt  (+20 more)
_sources/examples/: basic.rst.txt  pragma.rst.txt  registry.rst.txt  wisdom.rst.txt
_static/: my-styles.css
api/: Compiler.html  Config.html  ConfigSpace.html  CudaArch.html  CudaContextHandle.html  CudaDevice.html  CudaException.html  CudaSpan.html  DefaultLoader.html  DefaultOracle.html  FileLoader.html  ICompiler.html  IKernelDescriptor.html  IntoKernelArg.html  Kernel.html  KernelArg.html  KernelBuilder.html  KernelInstance.html  KernelRegistry.html  KernelSource.html  NvrtcCompiler.html  NvrtcException.html  Oracle.html  PragmaKernel.html  ProblemSize.html  TemplateArg.html  TunableParam.html  TypeInfo.html  Value.html  Variable.html  WisdomKernel.html  WisdomRecord.html  WisdomSettings.html  add_global_capture_pattern.html  append_global_wisdom_directory.html  build_pragma_kernel.html  builder.html  capture_file_exists.html  compiler.html  config.html  (+23 more)
docs/: .gitignore  Doxyfile.in  Makefile  api.rst  build_api.py  conf.py  env_vars.rst  example.cpp  example.rst  index.rst  install.rst  wisdom.rst
docs/_static/: my-styles.css
docs/api/: expr.rst  kernel.rst  wisdom.rst
docs/examples/: basic.cpp  index.cpp  matmul.cu  pragma.rst  registry.cpp  registry.rst  vector_add.cu  vector_add_annotated.cu  wisdom.cpp  wisdom.rst
examples/: CMakeLists.txt  Makefile  basic.html  example.cpp  kernel.cu  pragma.html  registry.html  vector_add.cu  vector_add_results.json  wisdom.html
examples/matmul/: CMakeLists.txt  Makefile  example  example.cpp  main.cu  matmul.cu  matmul.py  matmul_results.json
examples/vector_add/: .main_annotated.cu.swp  CMakeLists.txt  kernel.cu  kernel_annotated.cu  main.cu  main_annotated.cu  vector_add.py  vector_add_results.json
examples/vector_add_annotated/: CMakeLists.txt  kernel_annotated.cu  main.cu
include/: kernel_launcher.h
include/kernel_launcher/: arg.h  builder.h  cache.h  compiler.h  config.h  cuda.h  export.h  expr.h  fs.h  kernel.h  pragma.h  registry.h  utils.h  value.h  wisdom.h  wisdom_kernel.h
include/kernel_launcher/internal/: directives.h  parser.h  tokens.h
python/: tune.py
python/kernel_launcher/: __init__.py  reader.py  wisdom.py
samples/: example.cpp
src/: arg.cpp  builder.cpp  compiler.cpp  config.cpp  cuda.cpp  export.cpp  expr.cpp  fs.cpp  jitsafe_headers.cpp  kernel.cpp  pragma.cpp  pragma_parser.cpp  registry.cpp  utils.cpp  value.cpp  wisdom.cpp  wisdom_kernel.cpp  wisdome.cpp
src/internal/: directives.cpp  parser.cpp  tokens.cpp
tests/: .CMakeLists.txt.swp  CMakeLists.txt  arg.cpp  builder.cpp  compiler.cpp  config.cpp  export.cpp  expr.cpp  fs.cpp  internal.cpp  kernel.cpp  registry.cpp  test_utils.h  utils.cpp  value.cpp  wisdom.cpp
tests/assets/: example_header.cuh  example_kernel.wisdom  matmul_kernel.cu  matmul_key_1024x1024.json  vector_add.wisdom  vector_add_key_0.json  vector_add_key_1024.json
tests/kernels/: test.cu
